fix outdated field names
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/post.hbs
+++ b/post.hbs
@@ -79,7 +79,7 @@
     </article>
 </main>
 
-{{#get "posts" limit="3" include="tags,authors" filter="id:-{{id}}+primary_tag:{{primary_tag.slug}}"}}
+{{#get "posts" limit="3" include="tags,authors" filter="id:-{{comment_id}}+primary_tag:{{primary_tag.slug}}"}}
     {{#if posts}}
         <div class="related-posts">
             <div class="container">
