--- a/partials/theme_head.hbs
+++ b/partials/theme_head.hbs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 {{!-- Document Settings --}}
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -29,7 +30,6 @@
 <meta name="theme-color" content="#4360DF">
 
 {{!-- Styles'n'Scripts --}}
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,600|IBM+Plex+Sans:400,500,700" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="{{asset "css/main.min.css"}}" />
 <link rel="stylesheet" type="text/css" href="{{asset "css/style.css"}}" />
